--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,12 @@
+1.0-rc5:
+- Change executable name
+- Fix MSVC warnings
+- Update result images
+
+1.0-rc4:
+- Include zlib and libpng sources
+- Weight computation program
+
 1.0-rc3:
 - Fix build after erroneous removal of method Image::clone
 
